<resources>
    <!--MoneyInsert-->
    <string name="app_name">ドラログ</string>
    <string name="paragraph_name">費用項目</string>
    <string name="cost_name">金額</string>
    <string name="yen">円</string>
    <string name="payer_name">負担者</string>
    <string name="cost">例：2000 (上限：999999)</string>
    <string name="payer_spinner">選択してください</string>
    <!--folderDetail-->
    <string name="date">日付</string>
    <string name="title">タイトル</string>
    <string name="member_num">人数</string>
    <string name="member_numPara">人</string>
    <string name="member_name">メンバー</string>
    <string name="paragraph_used">金額項目</string>
    <string name="per_parson">1人あたり：</string>
    <string name="per_parson2">一人当たり</string>
    <string name="trashbox">ゴミ箱</string>
    <string name="total_name">合計：</string>
    <string name="home">ホーム</string>
    <string name="money_insert">金額入力</string>
    <string name="share">共有</string>
    <string name="point">・</string>
    <!--SetDB -->
    <string name="dbaction">Go</string>
    <!--Splash画面-->
    <string name="splash">ドラログ</string>
    <!--FolderCreate-->
    <string name="button">ドラログ</string>
    <string name="main">ドラログ</string>
    <string name="put_title">例：旅行（必須）</string>
    <string name="put_member1">例：山田太郎（必須）</string>
    <string name="put_member2">例：神田花子</string>
    <string name="put_member3">例：新橋二郎</string>
    <string name="put_member4">例：渋谷静香</string>
    <string name="put_member5">例：東京三郎</string>
    <string name="put_member6">例：秋葉凛</string>
    <string name="folder_create">フォルダ作成</string>

    <!--FolderList-->
    <string name="day">日付</string>
    <string name="tripname">旅行名</string>
    <string name="go_map">MAPへ</string>
    <string name="settings">⚙</string>
    <string name="members">人数</string>
    <string name="human">人</string>
    <string name="nothing_message">
        データがありません \n
        左上のボタンから \n
        新規作成お願いします \n
    </string>
    <!--MapsActivity-->
    <string name="map">地図</string>
    <string name="returnHome">戻る</string>
    <!--SupportActivity-->
    <string name="rules">利用規約</string>
    <string name="license">ライセンス</string>
    <string name="guide">利用方法</string>
    <string name="version">バージョン情報</string>
    <!--PolicyActivity-->
    <string name="policy">
        この利用規約（以下、「本規約」といいます。）は、株式会社シムテック（以下、「当社」といいます。）がこのアプリ上で提供するサービス、「ドラログ」（以下、「本サービス」といいます。）の利用条件を定めるものです。登録ユーザーの皆さま（以下、「ユーザー」といいます。）には、本規約に従って、本サービスをご利用いただきます。 \n
    </string>
    <string name="title_1">
        第1条（適用）
    </string>
    <string name="number_1">1.</string>
    <string name="policy_1_1">
        本規約は、ユーザーと当社との間の本サービスの利用に関わる一切の関係に適用されるものとします。
    </string>
    <string name="number_2">2.</string>
    <string name="policy_1_2">
        当社は本サービスに関し、本規約のほか、ご利用にあたってのルール等、各種の定め（以下、「個別規定」といいます。）をすることがあります。これら個別規定はその名称のいかんに関わらず、本規約の一部を構成するものとします。
    </string>
    <string name="number_3">3.</string>
    <string name="policy_1_3">
        本規約の規定が前条の個別規定の規定と矛盾する場合には、個別規定において特段の定めなき限り、個別規定の規定が優先されるものとします。
    </string>
    <string name="title_2">
        第2条（禁止事項）
    </string>
    <string name="policy_2">
        ユーザーは、本サービスの利用にあたり、以下の行為をしてはなりません。
    </string>
    <string name="policy_2_1">
        法令または公序良俗に違反する行為
    </string>
    <string name="policy_2_2">
        犯罪行為に関連する行為
    </string>
    <string name="policy_2_3">
        本サービスの内容等、本サービスに含まれる著作権、商標権ほか知的財産権を侵害する行為
    </string>
    <string name="number_4">4.</string>
    <string name="policy_2_4">
        当社、ほかのユーザー、またはその他第三者のサーバーまたはネットワークの機能を破壊したり、妨害したりする行為
    </string>
    <string name="number_5">5.</string>
    <string name="policy_2_5">
        本サービスによって得られた情報を商業的に利用する行為
    </string>
    <string name="number_6">6.</string>
    <string name="policy_2_6">
        当社のサービスの運営を妨害するおそれのある行為
    </string>
    <string name="number_7">7.</string>
    <string name="policy_2_7">
        不正アクセスをし、またはこれを試みる行為
    </string>
    <string name="number_8">8.</string>
    <string name="policy_2_8">
        他のユーザーに関する個人情報等を収集または蓄積する行為
    </string>
    <string name="number_9">9.</string>
    <string name="policy_2_9">
        不正な目的を持って本サービスを利用する行為
    </string>
    <string name="number_10">10.</string>
    <string name="policy_2_10">
        本サービスの他のユーザーまたはその他の第三者に不利益、損害、不快感を与える行為
    </string>
    <string name="number_11">11.</string>
    <string name="policy_2_11">
        他のユーザーに成りすます行為
    </string>
    <string name="number_12">12.</string>
    <string name="policy_2_12">
        当社が許諾しない本サービス上での宣伝、広告、勧誘、または営業行為
    </string>
    <string name="number_13">13.</string>
    <string name="policy_2_13">
        当社のサービスに関連して、反社会的勢力に対して直接または間接に利益を供与する行為
    </string>
    <string name="number_14">14.</string>
    <string name="policy_2_14">
        その他、当社が不適切と判断する行為
    </string>
    <string name="title_3">
        第3条（本サービスの提供の停止等）
    </string>
    <string name="policy_3_1">
        当社は、以下のいずれかの事由があると判断した場合、ユーザーに事前に通知することなく本サービスの全部または一部の提供を停止または中断することができるものとします。
    </string>
    <string name="number_a">a.</string>
    <string name="policy_3_1a">
        本サービスにかかるコンピュータシステムの保守点検または更新を行う場合
    </string>
    <string name="number_b">b.</string>
    <string name="policy_3_1b">
        地震、落雷、火災、停電または天災などの不可抗力により、本サービスの提供が困難となった場合
    </string>
    <string name="number_c">c.</string>
    <string name="policy_3_1c">
        コンピュータまたは通信回線等が事故により停止した場合
    </string>
    <string name="number_d">d.</string>
    <string name="policy_3_1d">
        その他、当社が本サービスの提供が困難と判断した場合
    </string>
    <string name="policy_3_2">
        当社は、本サービスの提供の停止または中断により、ユーザーまたは第三者が被ったいかなる不利益または損害についても、一切の責任を負わないものとします。
    </string>
    <string name="title_4">
        第4条（利用制限）
    </string>
    <string name="policy_4_1">
        当社は、ユーザーが以下のいずれかに該当する場合には、事前の通知なく、ユーザーに対して、本サービスの全部もしくは一部の利用を制限ができるものとします。
    </string>
    <string name="policy_4_1a">
        本規約のいずれかの条項に違反した場合
    </string>
    <string name="policy_4_1b">
        当社からの連絡に対し、一定期間返答がない場合
    </string>
    <string name="policy_4_1c">
        本サービスについて、最終の利用から一定期間利用がない場合
    </string>
    <string name="policy_4_1d">
        その他、当社が本サービスの利用を適当でないと判断した場合
    </string>
    <string name="policy_4_2">
        当社は、本条に基づき当社が行った行為によりユーザーに生じた損害について、一切の責任を負いません。
    </string>
    <string name="title_5">
        第5条（保証の否認および免責事項）
    </string>
    <string name="policy_5_1">
        当社は、本サービスに事実上または法律上の瑕疵（安全性、信頼性、正確性、完全性、有効性、特定の目的への適合性、セキュリティなどに関する欠陥、エラーやバグ、権利侵害などを含みます。）がないことを明示的にも黙示的にも保証しておりません。
    </string>
    <string name="policy_5_2">
        当社は、本サービスに起因してユーザーに生じたあらゆる損害について一切の責任を負いません。ただし、本サービスに関する当社とユーザーとの間の契約（本規約を含みます。）が消費者契約法に定める消費者契約となる場合、この免責規定は適用されません。
    </string>
    <string name="policy_5_3">
        前項ただし書に定める場合であっても、当社は、当社の過失（重過失を除きます。）による債務不履行または不法行為によりユーザーに生じた損害のうち特別な事情から生じた損害（当社またはユーザーが損害発生につき予見し、または予見し得た場合を含みます。）について一切の責任を負いません。また、当社の過失（重過失を除きます。）による債務不履行または不法行為によりユーザーに生じた損害の賠償は、ユーザーから当該損害が発生した月に受領した利用料の額を上限とします。
    </string>
    <string name="policy_5_4">
        当社は、本サービスに関して、ユーザーと他のユーザーまたは第三者との間において生じた取引、連絡または紛争等について一切責任を負いません。
    </string>
    <string name="title_6">
        第6条（サービス内容の変更等）
    </string>
    <string name="policy_6">
        当社は、ユーザーに通知することなく、本サービスの内容を変更しまたは本サービスの提供を中止することができるものとし、これによってユーザーに生じた損害について一切の責任を負いません。
    </string>
    <string name="title_7">
        第7条（利用規約の変更）
    </string>
    <string name="policy_7">
        当社は、必要と判断した場合には、ユーザーに通知することなくいつでも本規約を変更することができるものとします。なお、本規約の変更後、本サービスの利用を開始した場合には、当該ユーザーは変更後の規約に同意したものとみなします。
    </string>
    <string name="title_8">
        第8条（個人情報の取扱い）
    </string>
    <string name="policy_8">
        当社は、本サービスの利用によって取得する個人情報については、当社「プライバシーポリシー」に従い適切に取り扱うものとします。
    </string>
    <string name="policy_8_url_sentence">
        当社プライバシーポリシーURL:
    </string>
    <string name="title_9">
        第9条（通知または連絡）
    </string>
    <string name="policy_9">
        ユーザーと当社との間の通知または連絡は、当社の定める方法によって行うものとします。当社は、ユーザーから、当社が別途定める方式に従った変更届け出がない限り、現在登録されている連絡先が有効なものとみなして当該連絡先へ通知または連絡を行い、これらは、発信時にユーザーへ到達したものとみなします。
    </string>
    <string name="title_10">
        第10条（権利義務の譲渡の禁止）
    </string>
    <string name="policy_10">
        ユーザーは、当社の書面による事前の承諾なく、利用契約上の地位または本規約に基づく権利もしくは義務を第三者に譲渡し、または担保に供することはできません。
    </string>
    <string name="title_11">
        第11条（準拠法・裁判管轄）
    </string>
    <string name="policy_11_1">
        本規約の解釈にあたっては、日本法を準拠法とします。
    </string>
    <string name="policy_11_2">
        本サービスに関して紛争が生じた場合には、当社の本店所在地を管轄する裁判所を専属的合意管轄とします。
    </string>
    <string name="policy_end">
        以上
    </string>
    <string name="url_dialog">外部サイトにリンクしますか？</string>

    <string name="title_activity_maps">Map</string><!--CameraActivity-->
    <string name="launch_camera">カメラ</string>

    <!--×のダイアログ-->
    <string name="finish_message">登録せずにホーム画面に戻りますか？</string>
    <string name="finish_message_money">金額項目を登録せずにホーム画面に戻りますか？</string>
    <string name="yes">OK</string>
    <string name="no">キャンセル</string>

    <!-- support -->
    <string name="support">お客様サポート</string>
    
    <!-- version -->
    <string name="name">ドラログ：</string>
    <string name="inc">©︎2021 Cimtech Inc.</string>

</resources>