<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDFCFC"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.example.driveandroid.FolderCreate"
    tools:ignore="MissingDefaultResource">

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:orientation="horizontal">

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-1dp"
        tools:layout_editor_absoluteY="1dp">

        <Button
            android:id="@+id/returnMap"
            android:layout_width="123dp"
            android:layout_height="0dp"
            android:layout_marginBottom="154dp"
            android:text="@string/go_map"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tripname" />

        <TextView
            android:id="@+id/tripname"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="271dp"
            android:layout_marginEnd="54dp"
            android:layout_marginBottom="195dp"
            android:text="@string/tripname"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/returnMap"
            app:layout_constraintEnd_toStartOf="@+id/gomi"
            app:layout_constraintStart_toEndOf="@+id/date"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/date"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="27dp"
            android:text="@string/day"
            android:textSize="30sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tripname"
            app:layout_constraintEnd_toStartOf="@+id/tripname"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/gomi"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="71dp"
            android:layout_weight="1"
            android:text="@string/gomi"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/addFolder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tripname"
            app:layout_constraintTop_toBottomOf="@+id/settings" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addFolder"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="277dp"
            android:clickable="true"
            app:backgroundTint="#FBF9F9"
            app:fabSize="auto"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/gomi"
            app:layout_constraintStart_toStartOf="@+id/settings"
            app:layout_constraintTop_toBottomOf="@+id/gomi"
            app:maxImageSize="50dp"
            app:srcCompat="@android:drawable/ic_menu_add" />

        <Button
            android:id="@+id/settings"
            android:layout_width="68dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="185dp"
            android:backgroundTint="#F6F3F3"
            android:text="@string/settings"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/gomi"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>