<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/MoneyInsert"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGround"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:gravity="center_horizontal"
    tools:context="com.cimtech.driveandroid.MoneyInsertActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/drive_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:titleTextColor="@color/colorPrimary">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/close_button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="left"
            android:layout_marginBottom="5dp"
            app:backgroundTint="#0000"
            app:fabSize="auto"
            app:maxImageSize="20dp"
            app:srcCompat="@drawable/ic_close_icon" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/colorAccent"
            android:textSize="20dp" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="right"
            android:layout_marginEnd="5dp"
            app:backgroundTint="#0000"
            app:fabSize="auto"
            app:maxImageSize="20dp"
            app:srcCompat="@drawable/ic_info_w_icon" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:scaleType="fitEnd"
        android:src="@drawable/road_bgimg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="20dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal"
        android:paddingStart="25dp"
        android:paddingTop="7dp"
        android:paddingBottom="7dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_yen_icon" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title_1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:text="@string/money_insert"
            android:textColor="@color/colorAccent"
            android:textSize="20dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/border"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:orientation="horizontal">

            <!--項目名-->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/paragraph_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/paragraph_name"
                android:textColor="@color/colorBlack"
                android:textSize="13sp" />

            <!--スピナー-->
            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/paragraphSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:entries="@array/paragraphSpinner"
                android:gravity="center"
                android:prompt="@string/payer_spinner"
                android:spinnerMode="dialog"
                android:textColor="@color/colorBlack" />

        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/border" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <!--金額-->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/cost_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/cost_name"
                android:textColor="@color/colorBlack"
                android:textSize="13sp" />

            <!--金額入力部分-->
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/cost"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:cursorVisible="true"
                android:digits="0123456789"
                android:ems="6"
                android:gravity="center"
                android:hint="@string/cost"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:textColor="@color/colorBlack"
                android:textCursorDrawable="@null"
                android:textSize="15sp"
                app:counterEnabled="true"
                app:counterMaxLength="6" />

            <!--円-->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/yen"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="20dp"
                android:layout_weight="0.1"
                android:gravity="center"
                android:text="@string/yen"
                android:textColor="@color/colorBlack"
                android:textSize="20sp" />

        </LinearLayout>

<!--        &lt;!&ndash;カメラボタン&ndash;&gt;-->
<!--        <androidx.appcompat.widget.AppCompatImageButton-->
<!--            android:id="@+id/camera"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="end"-->
<!--            android:layout_marginTop="10dp"-->
<!--            android:layout_marginEnd="15dp"-->
<!--            android:background="@null"-->
<!--            android:src="@drawable/camera_bt" />-->

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@color/border" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <!--負担者-->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/payer_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/payer_name"
                android:textColor="@color/colorBlack"
                android:textSize="13sp" />

            <!--負担者スピナー-->
            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/payerSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_weight="0.1"
                android:gravity="center"
                android:prompt="@string/payer_spinner"
                android:spinnerMode="dialog"
                android:textColor="@color/colorBlack" />

        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="30dp"
            android:background="@color/border" />

    </LinearLayout>

    <!--入力完了ボタン-->
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/inputComp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="30dp"
        android:src="@drawable/done_bt" />

</RelativeLayout>