<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDFCFC"
    tools:context="com.example.driveandroid.FolderCreateActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/drive_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:titleTextColor="@color/colorPrimary">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/colorAccent"
                android:textSize="20dp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right">

            <ImageButton
                android:id="@+id/setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:backgroundTint="#0000"
                app:fabSize="auto"
                app:maxImageSize="50dp"
                app:srcCompat="@android:drawable/ic_menu_manage" />

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <!--登録がなかった時のメッセージを配置 真ん中に配置-->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/nothing_message"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/nothing_message"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/folderListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="100dp"
        android:scrollbars="vertical" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addFolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        app:backgroundTint="#FBF9F9"
        app:fabSize="auto"
        app:maxImageSize="50dp"
        app:srcCompat="@android:drawable/ic_menu_add" />

    <Button
        android:id="@+id/returnMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="30dp"
        android:text="@string/go_map"
        android:textSize="30sp" />

</RelativeLayout>